# drawio-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README  justfile
.devcontainer/: Dockerfile  Dockerfile.drawio-cli  devcontainer.json  docker-compose.yml  drawio_docker_entrypoint.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: codex-activity.yaml
.github/workflows/: ci.yml
crates/drawio-cli/: Cargo.toml
crates/drawio-core/: Cargo.toml
crates/drawio-core/src/: lib.rs  model.rs  parse.rs  serde_f64.rs  svg.rs
crates/drawio-core/tests/: encoded_payload.rs  parser_dump.rs  svg_dump.rs
crates/drawio-core/tests/helpers/: clean_svg.rs  mod.rs  pretty_print_svg.rs
crates/drawio-svg/: Cargo.toml
fixtures/: ignore.txt
fixtures/corpus/handpicked/: 001-rect.drawio  002-two-pages.drawio  003-vertexes.drawio  004-shape-text.drawio  005-arrow-text.drawio  006-test.drawio  007-rounded-ellipse.drawio  008-stroke-fill.drawio  009-text-styles.drawio  010-text-align-vertical.drawio  011-rotation.drawio  012-edge-routing.drawio  012-edge-styles.drawio  013-image-embed.drawio  014-groups-layers.drawio  015-container-relative.drawio  016-gradients.drawio  016-swimlane.drawio  017-gradients.drawio  018-edge-routing-extra.drawio  019-edge-routing-even_more.drawio  020-edge-routing-dangling-arrows.drawio
fixtures/expected/handpicked/: 001-rect.json  002-two-pages.json  003-vertexes.json  004-shape-test.json  005-arrow-text.json  006-test.json  007-rounded-ellipse.json  008-stroke-fill.json  009-text-styles.json  011-rotation.json  (+12 more)
