[package]
name = "drawio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.38.4"
thiserror = "1"
base64 = "0.22"
flate2 = "1"
percent-encoding = "2"

[dev-dependencies]
walkdir = "2"
similar = "2"
xml_c14n = "0.3.0"
xmltree = "0.12.0"
tempfile = "3.24.0"
